--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-icons": "^1.0.0-alpha2",
     "dotenv": "^8.2.0",
     "react": "^16.12.0",
+    "react-alice-carousel": "^1.17.3",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -25,7 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "copy src\\configurations\\config.js src\\configurations\\configBk.js && copy src\\configurations\\configProduction.js src\\configurations\\config.js && react-scripts build && move src\\configurations\\configBk.js src\\configurations\\config.js ",
-    "deploy" : "aws s3 sync ./build s3://metro2-furniture-ny.com",
+    "deploy": "aws s3 sync ./build s3://metro2-furniture-ny.com",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
